# AuroraCapitalAI

./: .env.example  .gitignore  LEGAL.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
aurora/: database.py  models.py  schemas.py
scripts/: agents_batch.py  reset_db.py  test_data_ingestion.py  test_models.py  test_news_sentiment.py
sql/: init.sql
sql/migrations/: 002_update_news_sentiment.sql
src/aurora/: __init__.py  config.py  database.py  models.py  scheduler.py  schemas.py
src/aurora/agents/: __init__.py  base.py  data_ingestion.py  data_ingestion.py.news
src/aurora_capital_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_scheduler.py
